Added thymeleaf support, locales, jpeg rather than png, resizing, thumbnails.